codepkg/objects/Sales_Error_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Batch_No__c</fullName>
        <formula>Upload_Batch_No__r.Batch_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>America Mid West - Hangers Unlimited</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Bangladesh - Bengal</fullName>
                </value>
                <value>
                    <fullName>Bangladesh Packaging</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benelux</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Cambodia - Jin Jin</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Colombia - Plasticso Ojara</fullName>
                </value>
                <value>
                    <fullName>Commerce CA</fullName>
                </value>
                <value>
                    <fullName>Dubai - El Kekhia JLT</fullName>
                </value>
                <value>
                    <fullName>Dubai - Hangsort</fullName>
                </value>
                <value>
                    <fullName>Egypt - El Kekhia Labels Packaging</fullName>
                </value>
                <value>
                    <fullName>Egypt - El Kekhia Plastics</fullName>
                </value>
                <value>
                    <fullName>El Salvador - H.B. Trim Co. Inc.</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Packaging</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - Ramie</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                    <label>INDIA</label>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Instore Agency AB</fullName>
                </value>
                <value>
                    <fullName>Italy - Mainetti Bags</fullName>
                </value>
                <value>
                    <fullName>Italy - OMAF</fullName>
                </value>
                <value>
                    <fullName>Italy - SpA</fullName>
                </value>
                <value>
                    <fullName>Keasbey</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia - MHL Industries (Malaysia) Sdn. Bhd</fullName>
                </value>
                <value>
                    <fullName>Mexico - Ganchos Freilaj</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Map_From_Value__c</fullName>
        <label>Map From Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_To_Value__c</fullName>
        <label>Map To Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Data_Field__c</fullName>
        <label>Raw Data Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>ItemCode</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>PrintedLogo</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>LocalName</fullName>
                </value>
                <value>
                    <fullName>MainettiBrand</fullName>
                </value>
                <value>
                    <fullName>Model</fullName>
                    <label>MODEL</label>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>OrderType</fullName>
                </value>
                <value>
                    <fullName>UnitSold</fullName>
                </value>
                <value>
                    <fullName>LocalCurrency</fullName>
                </value>
                <value>
                    <fullName>ShippedToFactory</fullName>
                </value>
                <value>
                    <fullName>ShippedToCountry</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>EndUser</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Division</fullName>
                </value>
                <value>
                    <fullName>RetailerBrand</fullName>
                </value>
                <value>
                    <fullName>RoyaltyRate</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                    <label>MARKET</label>
                </value>
                <value>
                    <fullName>LOB</fullName>
                </value>
                <value>
                    <fullName>SONumber</fullName>
                </value>
                <value>
                    <fullName>ProductionCountry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>default is inactive</fullName>
                    <isActive>false</isActive>
                    <label>default is inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upload_Batch_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upload Batch No</label>
        <referenceTo>Sales_Transaction_Stage__c</referenceTo>
        <relationshipLabel>Sales Error Mapping</relationshipLabel>
        <relationshipName>Sales_Error_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Error Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Map_From_Value__c</columns>
        <columns>Map_To_Value__c</columns>
        <columns>Raw_Data_Field__c</columns>
        <columns>Company__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Raw_Data_Field__c</field>
            <operation>equals</operation>
            <value>SubCategory</value>
        </filters>
        <filters>
            <field>Company__c</field>
            <operation>equals</operation>
            <value>Hong Kong Packaging</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Model</fullName>
        <columns>NAME</columns>
        <columns>Raw_Data_Field__c</columns>
        <columns>Map_From_Value__c</columns>
        <columns>Map_To_Value__c</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Raw_Data_Field__c</field>
            <operation>equals</operation>
            <value>Model</value>
        </filters>
        <label>All Model</label>
    </listViews>
    <listViews>
        <fullName>Brazil</fullName>
        <columns>NAME</columns>
        <columns>Map_From_Value__c</columns>
        <columns>Map_To_Value__c</columns>
        <columns>Raw_Data_Field__c</columns>
        <columns>Company__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <label>Brazil</label>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>NAME</columns>
        <columns>Map_From_Value__c</columns>
        <columns>Map_To_Value__c</columns>
        <columns>Raw_Data_Field__c</columns>
        <columns>Company__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Raw_Data_Field__c</field>
            <operation>equals</operation>
            <value>Retailer</value>
        </filters>
        <filters>
            <field>Company__c</field>
            <operation>equals</operation>
            <value>Vietnam</value>
        </filters>
        <label>_Search</label>
    </listViews>
    <nameField>
        <displayFormat>SEM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Error Mapping</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>